--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Score Keeper</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <h1> <span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
 
-<p>playing to: <span id="over">5</span></p>
+<p>playing to: <span>5</span></p>
 
 <input type="number">
 
